--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.83",
+    "@types/parallax-js": "^3.1.3",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
+    "parallax-js": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.12.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
