--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "parallax-js": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.12.2",
     "typescript": "^4.9.5",
