--- a/package.json
+++ b/package.json
@@ -6,17 +6,21 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/bootstrap": "^5.2.10",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.83",
     "@types/parallax-js": "^3.1.3",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
+    "bootstrap": "^5.3.3",
     "parallax-js": "^3.1.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.12.2",
+    "tsparticles": "^2.12.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
