--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
+    "react-scroll-parallax": "^3.4.5",
     "react-tsparticles": "^2.12.2",
     "tsparticles": "^2.12.0",
     "typescript": "^4.9.5",
