--- a/package.json
+++ b/package.json
@@ -49,6 +49,11 @@
   },
   "devDependencies": {
     "ejs": "^3.1.10",
-    "prettier": "^3.2.5"
+    "express": "^4.19.2",
+    "follow-redirects": "^1.15.6",
+    "nth-check": "^2.1.1",
+    "postcss": "^8.4.38",
+    "prettier": "^3.2.5",
+    "webpack-dev-middleware": "^5.3.4"
   }
 }
