--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-router-dom": "^6.22.1",
     "react-scroll-parallax": "^3.4.5",
     "react-tsparticles": "^2.12.2",
-    "tsparticles": "^2.12.0"
+    "tsparticles": "^2.12.0",
+    "tsparticles-engine": "^2.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
